correção do nome desenvolvedor

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 </body>
 <footer class="rodape">
     <section class="rodape-conteudo">
-    <p class="rodape-paragrafo">Desenvovido por Jerônimo S.Rodrigues.</p>
+    <p class="rodape-paragrafo">Desenvolvido por Jerônimo S.Rodrigues.</p>
     </section>
     <section class="rodape-conteudo">
     <a class="links" href="https://github.com/JeronimoSantos" title="GitHub" target="_blank">
