caracter faltando na palavra método

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <header class="cabecalho">
-        <h1 class="titulo">Metodo SMART</h1>
+        <h1 class="titulo">Método SMART</h1>
         <blockquote class="citacao">Specific, Mensurable, Achivable, Realistic and Timely</blockquote>
     </header>
 
     <section class="conteiner-introducao">
-        <h2 class="subtitulo">O que é o Metodo SMART?</h2>
+        <h2 class="subtitulo">O que é o Método SMART?</h2>
         <p class="paragrafo-introducao">Metas SMART é um método de definição de metas, as quais se baseiam em 5 fatores:
             S (<strong>específica</strong>), M (<strong>mensurável</strong>), A (<strong>atingível</strong>), 
             R (<strong>relevante</strong>) e T (<strong>temporal</strong>).
